[gd_scene load_steps=8 format=3 uid="uid://bgargshwa5h8r"]

[ext_resource type="PackedScene" uid="uid://c02r3pntikfwg" path="res://Scenes/settings_cell.tscn" id="1_7547t"]
[ext_resource type="Script" path="res://Scripts/esc.gd" id="1_mvajy"]
[ext_resource type="Texture2D" uid="uid://b148ragw1hdys" path="res://Icons/background.png" id="1_pvgdo"]
[ext_resource type="FontFile" uid="uid://n8rj5bhvxmak" path="res://Fonts/VarelaRound-Regular.ttf" id="1_qeq27"]
[ext_resource type="Texture2D" uid="uid://bkwtd1v2hd4ps" path="res://Icons/island.png" id="3_1dhpt"]
[ext_resource type="Texture2D" uid="uid://fjwtvf85a5q7" path="res://Icons/gear.png" id="4_o3le3"]
[ext_resource type="Texture2D" uid="uid://6j2o7ehn3165" path="res://Icons/quit.png" id="5_w3xp1"]

[node name="Esc" type="PanelContainer"]
process_mode = 3
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("1_mvajy")

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect2" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_pvgdo")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 30

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 53
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("1_qeq27")
theme_override_font_sizes/font_size = 71
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsCell" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_7547t")]
layout_mode = 2
texture = ExtResource("3_1dhpt")
label = "Buy Island"

[node name="SettingsCell2" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_7547t")]
layout_mode = 2
texture = ExtResource("4_o3le3")
label = "Settings"

[node name="SettingsCell3" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_7547t")]
layout_mode = 2
texture = ExtResource("5_w3xp1")
label = "Quit"

[connection signal="button_called" from="MarginContainer/VBoxContainer/SettingsCell" to="." method="_on_settings_cell_button_called"]
[connection signal="button_called" from="MarginContainer/VBoxContainer/SettingsCell2" to="." method="_on_settings_cell_2_button_called"]
[connection signal="button_called" from="MarginContainer/VBoxContainer/SettingsCell3" to="." method="_on_settings_cell_3_button_called"]
